--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.57.1",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-slideshow-image": "^4.2.1",
+    "sass": "^1.57.1"
   }
 }
